welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:8: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (c=d) {
              ^close10:8: error: type mismatch;
 found   : Unit
 required: Int
  } else if (c=d) {
         ^